--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,13 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="./assets/img/favicon.ico">
+  <script src="https://js.pusher.com/4.1/pusher.min.js"></script>
 </head>
 
 <body>
-  <app-root>Loading...</app-root>
+  <app-root>
+    <img src="../assets/img/senora-resize.png">
+  </app-root>
 </body>
 
 </html>
