--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,11 @@
 
 <body>
   <app-root>
-    <img src="../assets/img/senora-resize.png">
-    <p>Loading...</p>
+    <div class="loader">
+      <img src="../assets/img/senora-resize.png">
+      <p>Loading...</p>
+    </div>
+
   </app-root>
 </body>
 
