--- a/src/index.html
+++ b/src/index.html
@@ -12,13 +12,14 @@
 </head>
 
 <body>
-  <app-root>
-    <div class="loader">
-      <img src="../assets/img/senora-resize.png">
-      <p>Loading...</p>
-    </div>
-
-  </app-root>
+  <div class="main-container">
+    <app-root>
+      <div class="loader">
+        <img src="../assets/img/senora-resize.png">
+        <p>Loading...</p>
+      </div> 
+    </app-root>
+  </div>
 </body>
 
 </html>
